# openlibrary-kg

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  run_all.bat  run_all.ps1
docs/: CHANGES.md  CURRENT_STATE.md  FRONTIER_REPORT.md  IMPROVEMENTS.md  ITERATION_10.md  ITERATION_4_5.md  ITERATION_6.md  ITERATION_7.md  ITERATION_8.md  ITERATION_9.md  PHASE8_CHANGES.md  PRESENTATION.md  PRESENTATION.pptx  PRESENTATION_V2.md  PROJECT_ANALYSIS.md  README.txt  final_iterate.txt  关系梳理.txt
openlibrary_kg/: __init__.py  config.py  kg_query.py  models.py
output/: compare_summary.json  llm_baseline_eval.json  module_cards.json  soft_index.json  swebench_ground_truth.json
scripts/: add_scripts_coverage.py  analyze_both_miss.py  analyze_cooccurrence.py  analyze_eps.py  analyze_failures.py  analyze_issue_types.py  analyze_nomatch_rootcause.py  analyze_polysemy.py  analyze_subdomain_perf.py  analyze_unique_win.py  build_callgraph_edges.py  build_issue_ground_truth.py  build_kg.py  build_module_cards.py  build_scripts_kg.py  build_swebench_ground_truth.py  check_coverage.py  check_scripts_coverage.py  compare_methods.py  debug_soft_index.py  demo_data.py  demo_kg_agent.py  detect_synonyms.py  diagnose_kg_quality.py  eval_llm_augmented.py  eval_llm_baseline.py  eval_strategy_router.py  experiment_hybrid.py  experiment_llm_inject.py  experiment_llm_translate.py  export_to_neo4j.py  extract_concepts.py  generate_definitions.py  locate_issue.py  navigate_issue.py  run_kg_queries.py  run_pipeline.py  run_pipeline_with_scripts.py  test_soft_index.py
(+36 files in other folders)
