[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlibrary-kg"
version = "1.0.0"
description = "Knowledge Graph construction from Openlibrary codebase concepts"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "httpx>=0.25,<1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0,<2.0"]
anthropic = ["anthropic>=0.30,<1.0"]
neo4j = ["neo4j>=5.0,<6.0"]
sentence-transformers = [
    "sentence-transformers>=2.2,<4.0",
    "torch>=2.0,<3.0",
]
viz = ["pyvis>=0.3,<1.0"]
all = [
    "openlibrary-kg[openai,anthropic,neo4j,sentence-transformers,viz]",
]

[tool.setuptools.packages.find]
include = ["openlibrary_kg*"]
